# ChangeLog for sci-libs/blas-atlas
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sci-libs/blas-atlas/ChangeLog,v 1.99 2010/04/15 20:20:43 jlec Exp $

*blas-atlas-3.9.23-r2 (15 Apr 2010)

  15 Apr 2010; Justin Lecher <jlec@gentoo.org> -blas-atlas-3.9.23-r1.ebuild,
  +blas-atlas-3.9.23-r2.ebuild:
  Fixes for broken move to EAPI=3

*blas-atlas-3.9.23-r1 (07 Mar 2010)

  07 Mar 2010; Justin Lecher (jlec) <jlec@gentoo.org>
  +files/blas-atlas-3.9.3-darwin-make-top.patch,
  +blas-atlas-3.9.23-r1.ebuild:
  Moved to EAPI=3 for PREFIX support, imported prefix patches from overlay,
  removed epause

*blas-atlas-3.9.23 (18 Feb 2010)

  18 Feb 2010; Markus Dittrich <markusle@gentoo.org>
  +blas-atlas-3.9.23.ebuild, +files/atlas-3.9.23-ger-fix.patch:
  Version bump. This also fixes a regression in GER tuning code
  (ID 2953608 on atlas' sourceforge issue tracker).

*blas-atlas-3.9.21-r1 (06 Feb 2010)

  06 Feb 2010; Markus Dittrich <markusle@gentoo.org>
  +blas-atlas-3.9.21-r1.ebuild:
  New revision installs missing atlas_aux.h header (fixes #302951).

  29 Jan 2010; Markus Dittrich <markusle@gentoo.org>
  blas-atlas-3.9.21.ebuild:
  Updated version of shared libs patch to make sure we don't use
  libtool for linking executables (fixes #302235).

  23 Jan 2010; Markus Dittrich <markusle@gentoo.org>
  blas-atlas-3.9.21.ebuild:
  Added a short message regarding libtool (see bug #279920).

  23 Jan 2010; Markus Dittrich <markusle@gentoo.org>
  blas-atlas-3.9.21.ebuild:
  Fixed bug in libtoolized Makefile (fixes #301827).

*blas-atlas-3.9.21 (21 Jan 2010)

  21 Jan 2010; Markus Dittrich <markusle@gentoo.org>
  blas-atlas-3.9.3.ebuild, +blas-atlas-3.9.21.ebuild:
  Version bump (fixes bug #281688).

  22 Dec 2009; Diego E. Pettenò <flameeyes@gentoo.org>
  blas-atlas-3.9.3.ebuild:
  Use emake -j1 for build, bug #294172.

  14 Jan 2009; Sébastien Fabbro <bicatali@gentoo.org> files/blas.pc.in,